src/objects/EC_Event__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Exhibitor Connect Event to reference when making orders</description>
    <fields>
        <fullName>Event_Id__c</fullName>
        <label>Event Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduler_Documentation__c</fullName>
        <label>Scheduler Documentation</label>
        <type>Url</type>
    </fields>
    <label>Exhibitor Connect Event</label>
</CustomObject>